[gd_scene load_steps=4 format=3 uid="uid://dn22rohvjl651"]

[ext_resource type="Script" uid="uid://cchdbt4x0vfxe" path="res://Scripts/AI/Enemies/Flying/Flying_robot_minigun_AI.gd" id="1_ffd2u"]
[ext_resource type="PackedScene" uid="uid://3kly2si8sgjw" path="res://Scenes/Bodies/Enemies/Flying/Flying_robot_minigun.tscn" id="2_n3idc"]
[ext_resource type="Texture2D" uid="uid://cnkhhiac2tyvt" path="res://Sprites/Enemies/Flying/golden_33/Flying_robot_machinegun_reload.png" id="3_jida8"]

[node name="Flying_robot_minigun" type="Node2D"]
script = ExtResource("1_ffd2u")
amount_of_shoots = 7

[node name="Robot_body" parent="." instance=ExtResource("2_n3idc")]
z_index = 11

[node name="RayCast_left" type="RayCast2D" parent="Robot_body"]
target_position = Vector2(-20, 0)
collision_mask = 72

[node name="RayCast_right" type="RayCast2D" parent="Robot_body"]
target_position = Vector2(20, 0)
collision_mask = 72

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Robot_body"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(19.15, 11.65)
enable_node_path = NodePath("../..")

[node name="Sprite_reload" type="Sprite2D" parent="Robot_body"]
texture = ExtResource("3_jida8")
hframes = 7

[node name="Timer_one_shoot" type="Timer" parent="."]

[node name="Timer_change_frame" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer_one_shoot" to="." method="_on_timer_one_shoot_timeout"]
[connection signal="timeout" from="Timer_change_frame" to="." method="_on_timer_change_frame_timeout"]
